# yolo_inference

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: yolo_inference_params.yaml
launch/: yolo_inference.launch.py
yolo_inference/: yolo_inference_node.py  yolo_utils.py
